[package]
name = "mtusiServer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.122"
calamine = "0.25.0"
redis = { version = "0.26.1", features = ["tokio-comp"] }
once_cell = "1.19.0"
tokio-postgres = "0.7.11"